update some config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://purewordnew.github.io/personal-react-web",
+  "homepage": "https://pureworldnew.github.io/personal-react-web",
   "name": "react-gh-pages",
   "version": "0.1.0",
   "private": true,
